--- a/cookbooks/lighttpd/files/default/sites.conf
+++ b/cookbooks/lighttpd/files/default/sites.conf
@@ -1,4 +1,4 @@
-$HTTP["host"] =~ "^(link\.)?senet\.us$" {
+$HTTP["host"] =~ "^(blog|mongosv|link)?(\.|)senet\.us$" {
   index-file.names = ( ) 
   server.error-handler-404 = "/werc.rc"
   alias.url       += ( "/werc.rc" => "/srv/swerc/bin/werc.rc" )
