added redirect for rti domains

--- a/cookbooks/lighttpd/files/default/sites.conf
+++ b/cookbooks/lighttpd/files/default/sites.conf
@@ -1,7 +1,11 @@
-$HTTP["host"] =~ "^(blog|mongosv|link)?(\.|)senet\.us$" {
+$HTTP["host"] =~ "^((blog|mongosv|link)\.)?senet\.us$|((scan|www)\.)?(waterworkstallahassee|raythigpen|doc\.sistineskin)\.com$" {
   index-file.names = ( ) 
   server.error-handler-404 = "/werc.rc"
   alias.url       += ( "/werc.rc" => "/srv/swerc/bin/werc.rc" )
   cgi.assign += ( ".rc" => "") 
   server.dir-listing = "disable"
+}
+
+$HTTP["host"] =~ "^(www\.raythigpen\.com|ray(-thigpen|thigpengroup)\.com|raythigpen\.(net|org))$" {
+  url.redirect = ( "^/(.*)" => "http://raythigpen.com/$1")   
 }
